--- a/res/layout/simple_tabs.xml
+++ b/res/layout/simple_tabs.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2011 Jake Wharton
+<!--
+     Copyright (C) 2011 Jake Wharton
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -14,22 +15,42 @@
      limitations under the License.
 -->
 
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    android:orientation="vertical" >
 
-    <com.viewpagerindicator.TabPageIndicator
-        android:id="@+id/indicator"
-        android:layout_height="wrap_content"
+    <LinearLayout
+        android:id="@+id/navbar_container"
         android:layout_width="fill_parent"
-        />
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+
+        <com.viewpagerindicator.TabPageIndicator
+            android:id="@+id/indicator"
+            android:layout_width="0dp"
+            android:layout_weight="1.0"
+            android:layout_height="wrap_content" />
+
+        <ImageView
+            android:id="@+id/indicator_shade"
+            android:layout_width="wrap_content"
+            android:visibility="gone"
+            android:src="@drawable/ic_base_navbar_indicator_right_nor"
+            android:layout_height="wrap_content" />
+
+        <ImageView
+            android:id="@+id/indicator_add"
+            android:layout_width="wrap_content"
+            android:visibility="gone"
+            android:src="@drawable/ic_base_navbar_indicator_edit_nor"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        />
+        android:layout_weight="1" />
 
 </LinearLayout>
