convert code to controller

--- a/res/layout/simple_tabs.xml
+++ b/res/layout/simple_tabs.xml
@@ -20,33 +20,7 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
-    <FrameLayout
-        android:id="@+id/navbar_container"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal" >
-
-        <com.viewpagerindicator.TabPageIndicator
-            android:id="@+id/indicator"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content" />
-
-        <ImageView
-            android:id="@+id/indicator_shade"
-            android:layout_width="wrap_content"
-            android:visibility="gone"
-            android:layout_gravity="right"
-            android:src="@drawable/ic_base_navbar_indicator_right_nor"
-            android:layout_height="wrap_content" />
-
-        <ImageView
-            android:id="@+id/indicator_add"
-            android:layout_width="wrap_content"
-            android:visibility="gone"
-            android:layout_gravity="right"
-            android:src="@drawable/ic_base_navbar_indicator_edit_nor"
-            android:layout_height="wrap_content" />
-    </FrameLayout>
+    <include layout="@layout/combo_tab_indicator" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
